# msc-computer-intelligence

./: .gitignore  README.md  main.py
do/: node.py  search.py  state.py
lab1/: pyproject.toml
lab1/do/: action.py  frontier.py  search.py
lab1/list_implementation/: list_state.py
lab2/: .flake8  README.md  evolution_utils.py  main.py  pyproject.toml
lab2/do/: individual.py
list_implementation/: list_search.py  list_state.py  puller.py
