[tool.poetry]
name = "lab2"
version = "0.1.0"
description = "CI Lab2: Generic Algorithms"
authors = ["Juan Vanegas <jandvanegas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
